--- a/darwin/set-up/avian/set-up.tmbundle/info.plist
+++ b/darwin/set-up/avian/set-up.tmbundle/info.plist
@@ -7,7 +7,7 @@
 	<key>contactName</key>
 	<string>Harald Lapp</string>
 	<key>description</key>
-	<string>New shiny bundle for X.</string>
+	<string>Bundle for my work environment. https://github.com/aurora/set-up/.</string>
 	<key>name</key>
 	<string>set-up</string>
 	<key>uuid</key>
