--- a/darwin/etc/com.googlecode.iterm2.plist
+++ b/darwin/etc/com.googlecode.iterm2.plist
@@ -24,6 +24,11 @@
 	<true/>
 	<key>Control</key>
 	<integer>1</integer>
+	<key>Coprocess MRU</key>
+	<array>
+		<string>~/bin/iterm2-zmodem rz</string>
+		<string>~/bin/iterm2-zmodem sz</string>
+	</array>
 	<key>CopyLastNewline</key>
 	<false/>
 	<key>CopySelection</key>
