added php-version submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "rmate"]
 	path = rmate
 	url = https://github.com/aurora/rmate.git
+[submodule "php-version"]
+	path = php-version
+	url = https://github.com/wilmoore/php-version.git
